--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>Time, Space, and Complexity</h1>
+	<p>Time Complexity, including the words 'Time complexity' and 'efficient.'</p>
+	<p> <b>'Space Complexity'</b> and 'O(n).'</p>
+
+	
 </body>
 
 </html>
